<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context=".Gameplay">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageButton
                android:id="@+id/ib_voltar"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_marginStart="-165dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:contentDescription="@string/sair"
                android:tint="@color/amarelo"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                tools:ignore="UseAppTint,ImageContrastCheck" />
            <ImageView
                android:layout_width="500dp"
                android:layout_height="157dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/titulo"
                app:srcCompat="@drawable/gameplay1"/>

            <ImageButton
                android:id="@+id/btnspotify"
                android:layout_width="270dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:background="@null"
                android:contentDescription="@string/spotify"
                app:srcCompat="@drawable/spoti" />

            <TextView
                android:layout_width="351dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alata"
                android:gravity="center"
                android:text="@string/gameplay2"
                android:textColor="#FF5353"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/games"
                app:srcCompat="@drawable/games" />

        </LinearLayout>
    </ScrollView>


    </LinearLayout>